アイコン追加とタイマー完了時の動作を追加

--- a/OrTimer/OrTimer.csproj
+++ b/OrTimer/OrTimer.csproj
@@ -116,5 +116,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Image\OrTimerIcon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
