Fixed a bug and code cleanup.

--- a/Timer/Timer.csproj
+++ b/Timer/Timer.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
+    <PackageReference Include="ReactiveProperty" Version="8.1.0" />
   </ItemGroup>
 
 </Project>
