--- a/Timer/Timer.csproj
+++ b/Timer/Timer.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <Platforms>x64</Platforms>
+    <PlatformTarget>x64</PlatformTarget>
     <Authors>kleon</Authors>
     <ApplicationIcon>OrTimerIcon.ico</ApplicationIcon>
   </PropertyGroup>
@@ -14,6 +15,7 @@
     <ErrorReport>none</ErrorReport>
     <DebugType>none</DebugType>
     <DebugSymbols>false</DebugSymbols>
+    <Optimize>true</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,7 +25,7 @@
 
   <ItemGroup>
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
-    <PackageReference Include="ReactiveProperty" Version="8.1.0" />
+    <PackageReference Include="ReactiveProperty" Version="8.1.1" />
   </ItemGroup>
 
 </Project>
