Updated UI framework to winui 3.0.

--- a/Timer/Properties/launchSettings.json
+++ b/Timer/Properties/launchSettings.json
@@ -1,7 +1,10 @@
-{
-  "profiles": {
-    "Timer": {
-      "commandName": "Project"
+﻿{
+    "profiles": {
+      "Timer (Package)": {
+        "commandName": "MsixPackage"
+      },
+      "Timer (Unpackaged)": {
+        "commandName": "Project"
+      }
     }
-  }
 }
